--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/db": "^0.11.5",
     "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
     "@auth/core": "^0.18.6",
     "@fontsource-variable/work-sans": "^5.0.19",
+    "@hookform/resolvers": "^3.6.0",
     "@midudev/tailwind-animations": "^0.0.7",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -27,9 +33,12 @@
     "lucide-react": "^0.390.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "valibot": "^0.32.0",
+    "zod": "^3.23.8"
   }
 }
